--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
 
 <div id="main">
+  <div id="page">
+    <canvas>
+      
+    </canvas>
+
+  </div>
   <div id="page"></div>
   <div id="page1"></div>
   <div id="page2"></div>
